--- a/package.json
+++ b/package.json
@@ -14,9 +14,15 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "bulma": "^0.9.2",
     "gatsby": "^3.1.1",
+    "gatsby-plugin-sass": "^4.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "sass": "^1.32.8",
     "yarn": "^1.22.10"
+  },
+  "devDependencies": {
+    "node-sass": "^5.0.0"
   }
 }
